--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,20 @@
-html, body { width: 100%; height: 100%; overflow: hidden; }
+html, body { width: 100%; height: 100%; background-color: #FCFCD8; }
+
+.bigRoboto { font: 400 50px 'Roboto'; }
+
+#wrapper { width: 100%; color: #0E1425; padding-top: 50px; }
+#wrapper h1 { text-align: center; text-transform: uppercase; margin-bottom: 80px; letter-spacing: -1pt; }
+#wrapper h1 .smaller { font-size: 25px; text-transform: none; }
+#wrapper h1 .smaller sub { font-size: smaller; vertical-align: sub; }
+
+#wrapper .companies { width: 860px; height: 200px; margin: 0 auto; }
+#wrapper .company { position: relative; float: left; width: 200px; height: 200px; border: 1px solid black; margin-right: 20px; box-sizing: border-box; background-color: #FEDF44; }
+#wrapper .company .name { position: absolute; bottom: -30px; left: 0px; width: 200px; }
+#wrapper .company .time { position: absolute; top: -30px; left: 0px; }
+#wrapper .company .name sub { font-size: smaller; vertical-align: sub; }
+#wrapper .last { margin-right: 0px; }
+
+.laptop { background: url("../img/laptop.png") top left no-repeat; }
+.fb { background: url("../img/facebook.png") top left no-repeat; }
+.yt { background: url("../img/youtube.png") top left no-repeat; }
+.netflix { background: url("../img/netflix.png") top left no-repeat; }
