--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
 html, body { width: 100%; height: 100%; background-color: #000000; overflow: hidden; }
 
 @font-face { font-family: "din"; src: url("../fonts/font.otf"); }
+@font-face { font-family: "DINNextLTPro-MediumCond"; src: url("../fonts/DINNextLTPro-MediumCond.otf"); }
+@font-face { font-family: "DINEngschriftStd"; src: url("../fonts/DINEngschriftStd.otf"); }
 
-#wrapper { width: 100%; color: #0E1425; padding-top: 60px; }
-#wrapper h2 { font-size: 30px; text-align: center; text-transform: uppercase; margin-bottom: 20px; letter-spacing: -1pt; color: #797979; }
-#wrapper h1 { font: 300px normal "din"; text-align: center; margin-bottom: 60px; letter-spacing: -1pt; color: #FFFFFF; }
+#wrapper { width: 100%; color: #0E1425; padding-top: 100px; }
+#wrapper h2 { font-size: 30px; text-align: center; text-transform: uppercase; margin-bottom: 80px; letter-spacing: -1pt; color: #797979; }
+#wrapper h1 { font: 300px normal "DINEngschriftStd"; text-align: center; margin-bottom: 50px; color: #FFFFFF; }
+#wrapper h1 span { line-height: 250px;  }
 
-#wrapper .companies { width: 968px; height: 200px; margin: 0 auto; }
-#wrapper .company { position: relative; float: left; width: 240px; height: 200px;  }
-#wrapper .company .name { position: absolute; top: 0px; left: 0px; width: 240px; color: #797979; text-align: center; text-transform: uppercase; }
-#wrapper .company .time { font: 50px normal "din"; position: absolute; top: 100px; left: 0px; width: 240px; color: #D30915; text-align: center; }
+#wrapper .companies { width: 720px; height: 200px; margin: 0 auto; }
+#wrapper .company { position: relative; float: left; width: 180px; height: 200px;  }
+#wrapper .company .name { position: absolute; top: 0px; left: 0px; width: 160px; color: #797979; text-align: center; text-transform: uppercase; }
+#wrapper .company .time { font: 45px normal "DINNextLTPro-MediumCond"; position: absolute; top: 60px; left: 0px; width: 160px; color: #D30915; text-align: center; }
 #wrapper .last { margin-right: 0px; }
 
 #info { display: block; width: 50px; height: 50px; position: absolute; top: 20px; left: 20px; }
