--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html, body { width: 100%; height: 100%; background-color: #000000; overflow: hid
 #wrapper h2 { font-size: 30px; text-align: center; text-transform: uppercase; margin-bottom: 80px; letter-spacing: -1pt; color: #797979; }
 #wrapper h1 { font: 300px normal "DINEngschriftStd"; text-align: center; margin-bottom: 50px; color: #FFFFFF; }
 #wrapper h1 span { line-height: 250px;  }
+#wrapper #gas_usage { color: #797979; font: 20px normal "din"; text-align: center; position: relative; top: -70px; }
 
 #wrapper .companies { width: 720px; height: 200px; margin: 0 auto; }
 #wrapper .company { position: relative; float: left; width: 180px; height: 200px;  }
